--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,17 @@ beautifulsoup4==4.9.0
 bs4==0.0.1
 certifi==2020.4.5.1
 chardet==3.0.4
+DateTime==4.3
 discord==1.0.1
 discord.py==1.3.3
 idna==2.9
 langdetect==1.0.8
 multidict==4.7.5
+pytz==2019.3
 requests==2.23.0
 six==1.14.0
 soupsieve==2.0
 urllib3==1.25.8
 websockets==8.1
 yarl==1.4.2
+zope.interface==5.1.0
