--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,10 @@
-aiohttp==3.6.2
-async-timeout==3.0.1
 asyncio==3.4.3
-attrs==19.3.0
 beautifulsoup4==4.9.1
 bs4==0.0.1
-certifi==2020.6.20
-chardet==3.0.4
 DateTime==4.3
 discord==1.0.1
-discord.py==1.4.1
-idna==2.9
 langdetect==1.0.8
-multidict==4.7.5
-pytz==2019.3
+pytz==2020.1
 requests==2.23.0
-six==1.14.0
-soupsieve==2.0
-urllib3==1.25.8
-websockets==8.1
-yarl==1.4.2
-zope.interface==5.1.0
+
+tabulate~=0.8.7
